--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>obnoxious.club</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="obnoxious.club - hack vs hack team" />
-    <meta name="keywords" content="obnoxious.club, obnoxious, club, counter-strike, csgo, hvh" />
-    <meta name="author" content="Lummit" />
+    <meta name="description" content="slavicjedi.club - hack vs hack team" />
+    <meta name="keywords" content="slavicjedi.club, obnoxious, club, counter-strike, csgo, hvh" />
+    <meta name="author" content="Slavic" />
     <meta property="og:type" content="site" />
-    <meta property="og:title" content="obnoxious.club" />
-    <meta property="og:description" content="obnoxious.club - hack vs hack team" />
-    <meta property="og:url" content="https://obnoxious.club/" />
+    <meta property="og:title" content="slavicjedi.club" />
+    <meta property="og:description" content="slavicjedi.club - hack vs hack team" />
+    <meta property="og:url" content="https://slavicjedi.club/" />
     <meta property="og:image" content="assets/icons/obnoxious.jpg" />
-    <meta itemprop="name" content="obnoxious.club" />
-    <meta itemprop="description" content="obnoxious.club - hack vs hack team" />
+    <meta itemprop="name" content="slavicjedi.club" />
+    <meta itemprop="description" content="slavicjedi.club - hack vs hack team" />
     <meta itemprop="image" content="assets/icons/obnoxious.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -45,7 +45,7 @@
 
     <div class="container" style="display: none;">
       <h1 class="brand-header">
-        <a href="https://steamcommunity.com/groups/obnoxious_club" target="_BLANK">obnoxious.club</a>
+        <a href="https://steamcommunity.com/groups/obnoxious_club" target="_BLANK">slavicjedi.club</a>
       </h1>
 
       <p><span id="brand"></span></p>
