--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <title>obnoxious.club</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="slavicjedi.club - hack vs hack team" />
-    <meta name="keywords" content="slavicjedi.club, obnoxious, club, counter-strike, csgo, hvh" />
+    <meta name="description" content="slavicjedi.club - Professional Swindler" />
+    <meta name="keywords" content="slavicjedi.club, slavicjedi, exchanges, jediunion.ga" />
     <meta name="author" content="Slavic" />
     <meta property="og:type" content="site" />
     <meta property="og:title" content="slavicjedi.club" />
-    <meta property="og:description" content="slavicjedi.club - hack vs hack team" />
+    <meta property="og:description" content="slavicjedi.club - Providing Discord Services 2020-2021" />
     <meta property="og:url" content="https://slavicjedi.club/" />
     <meta property="og:image" content="assets/icons/obnoxious.jpg" />
     <meta itemprop="name" content="slavicjedi.club" />
-    <meta itemprop="description" content="slavicjedi.club - hack vs hack team" />
+    <meta itemprop="description" content="slavicjedi.club - Providing Discord Services 2020-2021" />
     <meta itemprop="image" content="assets/icons/obnoxious.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
@@ -46,7 +46,7 @@
 
     <div class="container" style="display: none;">
       <h1 class="brand-header">
-        <a href="https://steamcommunity.com/groups/obnoxious_club" target="_BLANK">slavicjedi.club</a>
+        <a href="https://google.com" target="_BLANK">slavicjedi.club</a>
       </h1>
 
       <p><span id="brand"></span></p>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="footer">
-      <i><a href="https://discordapp.com/invite/dgc37sk" target="_BLANK">Discord server</a></i>
+      <i><a href="https://discordapp.com/invite/XN5tzEZe4w" target="_BLANK">Discord server</a></i>
     </div>
 
     <script type="text/javascript" src="assets/javascript/lib/jquery-3.1.1.min.js"></script>
