--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="container" style="display: none;">
       <h1 class="brand-header">
-        <a href="https://google.com" target="_BLANK">slavicjedi.club</a>
+        <a href="https://discord.gg/XN5tzEZe4w" target="_BLANK">slavicjedi.club</a>
       </h1>
 
       <p><span id="brand"></span></p>
