--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>obnoxious.club</title>
+    <title>slavicjedi.club</title>
     <meta charset="UTF-8" />
     <meta name="description" content="slavicjedi.club - Professional Swindler" />
     <meta name="keywords" content="slavicjedi.club, slavicjedi, exchanges, jediunion.ga" />
