--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="container" style="display: none;">
       <h1 class="brand-header">
-        <a href="https://media.discordapp.net/attachments/840773142526951457/840773185627619398/Screen_Shot_2021-05-08_at_10.11.37_PM.png" target="_BLANK">slavicjedi.club</a>
+        <a href="https://media.discordapp.net/attachments/840773142526951457/840773185627619398/Screen_Shot_2021-05-08_at_10.11.37_PM.png" target="_BLANK">SlavicJedi#0001</a>
       </h1>
 
       <p><span id="brand"></span></p>
